--- a/styles/color-hist.css
+++ b/styles/color-hist.css
@@ -80,12 +80,12 @@
     text-align: center;
     position: relative;
     max-width: 1000px;
-    height: 550px;
+    height: 770px;
 }
 
 .popup-content-clr-hist img{
-    width: 100%;
-    height: 500px;
+    width: 900px;
+    height: 700px;
     border-radius: 5px;
 }
 
